fixing pagination; shared across all routes and exporing types
